<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Text display of the App Name -->
    <string name="app_name">JustJava</string>

    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="Name">Name</string>

    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="toppings">toppings</string>

    <!-- Topping name [CHAR LIMIT=20] -->
    <string name="Whipped_Cream">Whipped Cream</string>

    <!-- Topping name [CHAR LIMIT=20] -->
    <string name="Chocolate">Chocolate</string>

    <!-- Header text for the Quantity of Coffees [CHAR LIMIT=3] -->
    <string name="Quantity">Quantity</string>

    <!-- Button text for the Order Summary [CHAR LIMIT=20] -->
    <string name="ORDER">Order</string>

    <!--      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the user's name. [CHAR LIMIT=NONE] -->
    <string name="order_summary_name">Name : <xliff:g id = "name"> </xliff:g>%s</string>

    <!--Whipped cream topping for the order summary. It will be shown in the format of "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE] -->
    <string name="add_Whipped_Cream">Add Whipped Cream? <xliff:g id="addWhippedCream">%b</xliff:g></string>

    <!-- Chocolate topping for the order summary. It will be shown in the format of "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]-->
    <string name="add_Chocolate">Add Chocolate? <xliff:g id="addChocolate">%b</xliff:g></string>

    <!--
        Quantity of coffee cups for the order summary. It will be shown in the format of
        "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
        -->
    <string name="order_summary_quantity">Quantity : <xliff:g id="quantity">%d</xliff:g></string>

    <!--
        Total price for the order summary. It will be shown in the format of
        "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
        -->
    <string name="total">Total : Rs. <xliff:g id="price">%d</xliff:g></string>

    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name">%s</xliff:g></string>

    <!-- Thank You message for Order Summary. [CHAR LIMIT=20] -->
    <string name="Thank_You">Thank You!!!</string>

    <string name="Max_100_Coffee">Max Limit Reached!!!</string>

    <string name="Min_1_Coffee">Min Limit Reached!!!</string>

</resources>
